# Saudi_LLM_App

./: LICENSE.txt  README.md  app.py
backend/: .env  main.py  pyproject.toml
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Navigation.tsx
frontend/src/components/chat/: ChatInput.tsx  MessageBubble.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/pages/: ChatPage.tsx  LeadersPage.tsx
frontend/src/services/: chatService.ts
